# SAE-LLM-Steering

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
config/experiment/: gemma_scope.yaml  gemma_scope_27b.yaml
config/model/: gemma-3-27b.yaml  gemma-3-4b.yaml
resources/: ipi_questions.csv  ipi_questions_test.csv  ipi_questions_val.csv  split_FS.csv  split_optim.csv
resources/epistemical_integrity/: get_data.ipynb
resources/epistemical_integrity/data_processed/: belief_candidates.parquet  belief_triples.parquet  questions.parquet  semantic_filter.jsonl  split_manifest.csv
resources/epistemical_integrity/data_processed/behavior_validation/: mc0.jsonl  mc1.jsonl  mc2.jsonl
resources/epistemical_integrity/data_processed/feature_selection/: mc0.jsonl
resources/epistemical_integrity/data_processed/holdout_test_behavior/: mc0.jsonl  mc1.jsonl  mc2.jsonl
resources/epistemical_integrity/reports/: rejected_beliefs.csv  split_distribution.csv  split_summary.json  validation_report.json
resources/epistemical_integrity/src/: __init__.py  __main__.py  build_beliefs.py  build_dataset.py  build_splits.py  build_variants.py  join_mc_targets.py  parse_truthfulqa.py  validate_outputs.py
resources/epistemical_integrity/tests/: test_pipeline.py
scripts/: check_split_leakage.py  log_dataset_to_wandb.py  print_option_mapping.py
src/: activation_df.py  backfill_manifests.py  extract_activations.py  gemma_3_wrapper.py  ipi_eval.py  llama_3dot1_wrapper.py  mistral_7b_wrapper.py  model_factory.py  optimize_sae_steering.py  phi_3_mini_wrapper.py  poeta_evaluator.py  question_score_variance.py  qwen_3_wrapper.py  run_pipeline.py  select_sae_features.py  summarize_sweep.py
src/utils/: __init__.py  experiment_ids.py  hf_sae_shapes.py  intervention_hooks.py  ipi_prompts.py  ipi_surrogate.py  local_artifacts.py  metrics_backfill.py  sae_steering.py  seed_modes.py  seeds.py  wandb_artifacts.py  weight_cache.py
tests/: test_gemma3_wrapper_intervention.py  test_local_artifacts.py  test_run_pipeline_manifest_safety.py  test_sae_steering_v2.py  test_weight_cache.py
(+1 files in other folders)
