[project]
name = "sae-llm-steering"
version = "0.1.0"
description = "SAE-based political stance steering for Gemma and related LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cmaes",
    "hydra-core",
    "ipykernel",
    "jupyterlab",
    "matplotlib",
    "numba>=0.59",
    "numpy",
    "omegaconf",
    "optuna",
    "pandas",
    "pyarrow",
    "sae-lens",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sentence-transformers",
    "torch",
    "tqdm",
    "transformer-lens",
    "transformers",
    "umap-learn>=0.5.6",
    "wandb",
]

[tool.uv]
package = false
