[project]
name = "sae-llm-steering"
version = "0.1.0"
description = "SAE-based political stance steering for Gemma and related LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cmaes",
    "hydra-core",
    "ipykernel",
    "jupyterlab",
    "matplotlib",
    "numba>=0.59",
    "numpy",
    "omegaconf",
    "optuna",
    "pandas",
    "pyarrow",
    "pytest>=6.25",
    "sae-lens",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sentence-transformers",
    "torch",
    "tqdm",
    "transformer-lens",
    "transformers",
    "umap-learn>=0.5.6",
]

[tool.uv]
package = false

# Default PyPI torch wheels ship CUDA 13; pin the cu126 index for cluster drivers.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
